# 430-Labs

cs430/: pyproject.toml
cs430/Lab 6/: agent.ipynb  lab_ch6_results.md
cs430/Lab Vision/: agent.ipynb  lab_vision_results.md
cs430/Lab wordle/: lab_wordle_results.md  wordle.ipynb
cs430/Lab-3/: articulation.py  lab_ch5_results.md  mcts.py  minimax.py  ollamatron.py  pyproject.toml  round_robin.py
